Implemented the wishlist functionality and fixed some bugs on cart and orders in the user side.

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -34,7 +34,7 @@
         </div>
     </header>
     <!-- Navigation -->
-    <nav class="w-full bg-orange-400 p-2 flex justify-center space-x-8">
+    <nav class="w-full bg-gradient-to-r from-yellow-400 to-orange-400 p-2 flex justify-center space-x-8">
         <a class="hover:underline" href="/user/home">Home</a>
         <a class="hover:underline" href="/user/products">Products</a>
         <a class="hover:underline" href="#about">About</a>
