Added the coupon section in the user dashboard and also in the product detail page.

--- a/views/partials/user/dashboard_sideBar.ejs
+++ b/views/partials/user/dashboard_sideBar.ejs
@@ -5,6 +5,7 @@
             <li class="mb-2"><a href="/user/profile" class="block w-full p-2 rounded-full text-center <%= activeTab === 'profile' ? 'bg-orange-300' : 'bg-orange-200' %>">Information</a></li>
             <li class="mb-2"><a href="/user/addresses" class="block w-full p-2 rounded-full text-center <%= activeTab === 'addresses' ? 'bg-orange-300' : 'bg-orange-200' %>">Manage address</a></li>
             <li class="mb-2"><a href="/user/orders" class="block w-full p-2 rounded-full text-center <%= activeTab === 'orders' ? 'bg-orange-300' : 'bg-orange-200' %>">Order History</a></li>
+            <li class="mb-2"><a href="/user/dashboard/coupons" class="block w-full p-2 rounded-full text-center <%= activeTab === 'coupons' ? 'bg-orange-300' : 'bg-orange-200' %>">Coupons</a></li>
         </ul>
     </div>
     <div class="mb-6 flex flex-col justify-center text-center w-full">
