Added the ability to apply coupon on the checkout page. And merged the separate pages of address selection, summary, payment in one page.

--- a/views/user/cart/cart.ejs
+++ b/views/user/cart/cart.ejs
@@ -52,7 +52,7 @@
             </div>
             <% }) %>
             <div id="checkoutButton" class="mt-8 flex justify-center" style="display: '<%= countOfProducts > 0 ? 'flex' : 'none' %>'">
-                <a class="bg-orange-300 text-black px-8 py-4 rounded-lg text-xl" href="/user/order/addressPage">Check out</a>
+                <a class="bg-orange-300 text-black px-8 py-4 rounded-lg text-xl" href="/user/checkout">Check out</a>
             </div>
         </div>
     </main>
