--- a/views/user/cart/cart.ejs
+++ b/views/user/cart/cart.ejs
@@ -34,17 +34,20 @@
                             <p class="mt-2 text-gray-600"><%= product.productId.description %></p>
                         </div>
                         <div class="text-right w-1/5 md:ml-4">
-                            <p class="text-lg font-bold">Total: ₹<span id="total-price-<%= product.productId._id %>"><%= product.productId.sellingPrice * product.quantity %></span></p>
-                            <p class="text-gray-500">(₹<%= product.productId.sellingPrice %> each)</p>
-                        </div>
+                            <p class="text-lg font-bold">
+                                Total: ₹<span id="total-price-<%= product.productId._id %>"><%= product.discountedPrice * product.quantity %></span>
+                            </p>
+                            <p class="text-gray-500">(₹<%= product.discountedPrice %> each)</p>
+                            <span class="text-sm text-red-500 font-normal">(<%= product.bestDiscountType %>)</span>
+                        </div>                                                
                     </div>
                     <div class="flex items-center space-x-4 mt-4">
                         <!-- Quantity Controls -->
-                        <button onclick="updateQuantity('<%= product.productId._id %>', -1,'<%= product.productId.inventory %>','<%= product.productId.sellingPrice %>')" class="bg-gray-300 px-2 py-1 rounded-lg">-</button>
+                        <button onclick="updateQuantity('<%= product.productId._id %>', -1,'<%= product.productId.inventory %>','<%= product.discountedPrice %>')" class="bg-gray-300 px-2 py-1 rounded-lg">-</button>
                         <div class="bg-gray-200 px-4 py-2 rounded-lg">
                             <span id="quantity-<%= product.productId._id %>"><%= product.quantity %></span>
                         </div>
-                        <button onclick="updateQuantity('<%= product.productId._id %>', 1,'<%= product.productId.inventory %>','<%= product.productId.sellingPrice %>')" class="bg-gray-300 px-2 py-1 rounded-lg">+</button>
+                        <button onclick="updateQuantity('<%= product.productId._id %>', 1,'<%= product.productId.inventory %>','<%= product.discountedPrice %>')" class="bg-gray-300 px-2 py-1 rounded-lg">+</button>
                         <button class="text-gray-500" onclick="removeProduct('<%= product.productId._id %>')">Remove</button>
                         <button class="bg-orange-300 text-white px-4 py-2 rounded-lg">Buy Now</button>
                     </div>
