--- a/views/user/product folder/products.ejs
+++ b/views/user/product folder/products.ejs
@@ -190,11 +190,11 @@
             return;
         }
 
+        const isLoggedIn = '<%- session %>';
+
         products.forEach(product => {
-            const isInWishlist = wishlistItems.some(item => item.productId === product._id);
-            const heartClass = isInWishlist ? 'text-red-500' : 'text-gray-400';
             
-            const productHtml = `
+            let productHtml = `
                 <div class="relative">
                     <a href="/user/product/${product._id}">
                         <div class="bg-white p-4 rounded shadow">
@@ -213,6 +213,12 @@
                             </div>
                         </div>
                     </a>
+            `;
+            if (isLoggedIn) {
+                const isInWishlist = wishlistItems.some(item => item.productId === product._id);
+                const heartClass = isInWishlist ? 'text-red-500' : 'text-gray-400';
+
+                productHtml += `
                     <!-- Heart Icon as Overlay -->
                     <button 
                         class="absolute top-2 right-2 hover:text-red-500 transition duration-300" 
@@ -220,8 +226,9 @@
                     >
                         <i class="fas fa-heart ${heartClass}"></i>
                     </button>
-                </div>
-            `;
+                `;
+            }
+            productHtml += `</div>`;
             productsContainer.insertAdjacentHTML('beforeend', productHtml);
         });
     }
@@ -290,6 +297,11 @@
     }
 
     async function toggleWishlist( productId, button) {
+        const isLoggedIn = '<%- session %>';
+        if (!isLoggedIn) {
+            alert('Please log in to add items to your wishlist.');
+            return;
+        }
         try {
             const icon = button.querySelector('i');
 
